@@ -689,15 +689,18 @@ static int		recv_idlist	(CalcHandle* handle, uint8_t* idlist)
 	return 0;
 }
 
-// same code as calc_92.c
-static int		dump_rom	(CalcHandle* handle, CalcDumpSize size, const char *filename)
+static int		dump_rom_1	(CalcHandle* handle)
 {
-	FILE *f;
-	int err;
-
 	// Send dumping program
 	TRYF(rd_send(handle, "romdump.89z", romDumpSize89, romDump89));
+	PAUSE(1000);
 
+	return 0;
+}
+
+// same code as calc_92.c
+static int		dump_rom_2	(CalcHandle* handle, CalcDumpSize size, const char *filename)
+{
 	// Launch program by remote control
 	PAUSE(200);
 	TRYF(send_key(handle, KEY89_HOME));
@@ -724,18 +727,8 @@ static int		dump_rom	(CalcHandle* handle, CalcDumpSize size, const char *filenam
 	PAUSE(200);
 
 	// Get dump
-	f = fopen(filename, "wb");
-	if (f == NULL)
-		return ERR_OPEN_FILE;
+	TRYF(rd_dump(handle, filename));
 
-	err = rd_dump(handle, f);
-	if(err)
-	{
-		fclose(f);
-		return err;
-	}
-
-	fclose(f);
 	return 0;
 }
 
@@ -967,7 +960,8 @@ const CalcFncts calc_89 =
 	&recv_flash,
 	&send_flash,
 	&recv_idlist,
-	&dump_rom,
+	&dump_rom_1,
+	&dump_rom_2,
 	&set_clock,
 	&get_clock,
 	&del_var,
@@ -1004,7 +998,8 @@ const CalcFncts calc_92p =
 	&recv_flash,
 	&send_flash,
 	&recv_idlist,
-	&dump_rom,
+	&dump_rom_1,
+	&dump_rom_2,
 	&set_clock,
 	&get_clock,
 	&del_var,
@@ -1041,7 +1036,8 @@ const CalcFncts calc_89t =
 	&recv_flash,
 	&send_flash,
 	&recv_idlist,
-	&dump_rom,
+	&dump_rom_1,
+	&dump_rom_2,
 	&set_clock,
 	&get_clock,
 	&del_var,
@@ -1078,7 +1074,8 @@ const CalcFncts calc_v2 =
 	&recv_flash,
 	&send_flash,
 	&recv_idlist,
-	&dump_rom,
+	&dump_rom_1,
+	&dump_rom_2,
 	&set_clock,
 	&get_clock,
 	&del_var,
