@@ -452,15 +452,18 @@ static int		recv_idlist	(CalcHandle* handle, uint8_t* idlist)
 	return 0;
 }
 
-// same code as calc_89.c
-static int		dump_rom	(CalcHandle* handle, CalcDumpSize size, const char *filename)
+static int		dump_rom_1	(CalcHandle* handle)
 {
-	FILE *f;
-	int err;
-
 	// Send dumping program
 	TRYF(rd_send(handle, "romdump.92p", romDumpSize92, romDump92));
+	PAUSE(1000);
 
+	return 0;
+}
+
+// same code as calc_89.c
+static int		dump_rom_2	(CalcHandle* handle, CalcDumpSize size, const char *filename)
+{
 	// Launch program by remote control
 	PAUSE(200);
 	TRYF(send_key(handle, KEY92P_CLEAR));
@@ -485,18 +488,8 @@ static int		dump_rom	(CalcHandle* handle, CalcDumpSize size, const char *filenam
 	PAUSE(200);
 
 	// Get dump
-	f = fopen(filename, "wb");
-	if (f == NULL)
-		return ERR_OPEN_FILE;
+	TRYF(rd_dump(handle, filename));
 
-	err = rd_dump(handle, f);
-	if(err)
-	{
-		fclose(f);
-		return err;
-	}
-
-	fclose(f);
 	return 0;
 }
 
@@ -638,7 +631,8 @@ const CalcFncts calc_92 =
 	&recv_flash,
 	&send_flash,
 	&recv_idlist,
-	&dump_rom,
+	&dump_rom_1,
+	&dump_rom_2,
 	&set_clock,
 	&get_clock,
 	&del_var,
